--- a/views/admin/settings.ejs
+++ b/views/admin/settings.ejs
@@ -75,7 +75,7 @@
             <div class="card mb-4">
               <div class="card-header">Account Details</div>
               <div class="card-body">
-                <form id="myform">
+                <form>
                   <div class="row gx-3 mb-3">
                     <div class="col-md-6">
                       <label class="small mb-1" for="firstName"
@@ -163,7 +163,6 @@
               body: JSON.stringify({}),
             });
             const data = await res.json();
-
           } catch (err) {
             console.log(err);
           }
