--- a/views/student/nav.ejs
+++ b/views/student/nav.ejs
@@ -36,11 +36,8 @@
         />
         <div class="list" id="profileMenu">
           <ul>
-            <li><a href="#">Profile</a></li>
             <li><a href="/student/settings">Manage your account</a></li>
-            <li><a href="#">Switch account</a></li>
-            <li><a href="#">Add another account</a></li>
-            <li><a href="#">Log out</a></li>
+            <li><a href="/logout">Log out</a></li>
           </ul>
         </div>
       </div>
