--- a/views/student/settings.ejs
+++ b/views/student/settings.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- font-awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -11,23 +12,27 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/css/student/settings.css" />
+    <!-- toastify -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <!-- style sheets  -->
+    <link rel="stylesheet" href="/css/general.css" />
+    <link rel="stylesheet" href="/css/student/settings.css" />
     <title>Student-Settings</title>
   </head>
 
   <body>
-    <main>
+    <main data-userid="<%=user._id%>">
       <div class="container-xl px-4 mt-4">
         <nav class="nav nav-borders">
           <li><a class="nav-link active" href="#">Profile</a></li>
@@ -42,25 +47,23 @@
             <div class="card mb-4 mb-xl-0">
               <div class="card-header">Profile Picture</div>
               <div class="card-body text-center">
-                <form
-                  action="upload.php"
-                  method="post"
-                  enctype="multipart/form-data"
-                >
+                <form>
                   <label for="fileToUpload">
-                    <div class="profile-pic">
-                      <span class="profilePicture"></span>
-                      <span>Change Image</span>
-                    </div>
+                    <div
+                      class="profile-pic"
+                      style="background-image: url(<%=user.profilePic %>)"
+                    ></div>
                   </label>
                   <input type="File" name="fileToUpload" id="fileToUpload" />
                 </form>
                 <div class="small font-italic text-muted mb-4">
                   JPG or PNG no larger than 5 MB
                 </div>
-                <button class="btn btn-primary" type="button">
-                  Upload new image
-                </button>
+                <div class="button-container">
+                  <button class="btn btn-primary" id="upload-new-image">
+                    Upload new image
+                  </button>
+                </div>
               </div>
             </div>
           </div>
@@ -69,125 +72,123 @@
             <div class="card mb-4">
               <div class="card-header">Account Details</div>
               <div class="card-body">
-                <form id="UpdateProfile_Form">
-                  <div class="mb-3">
-                    <label class="small mb-1" for="Username"
-                      >Username (How your name will appear to other users on the
-                      site)</label
-                    >
-                    <input
-                      class="form-control"
-                      id="username"
-                      type="text"
-                      placeholder="Enter your username"
-                      value="<%= user.username %>"
-                    />
-                    <span id="errorUsername" class="error"></span>
-                  </div>
+                <form id="form">
                   <div class="row gx-3 mb-3">
                     <div class="col-md-6">
-                      <label class="small mb-1" for="First Name"
+                      <label class="small mb-1" for="firstName"
                         >First name</label
                       >
                       <input
                         class="form-control"
                         id="firstName"
+                        name="firstName"
                         type="text"
-                        placeholder="Enter your first name"
                         value="<%= user.firstName %>"
                       />
-                      <span id="errorFirstname" class="error"></span>
+                      <span id="errorFirstName" class="error"></span>
                     </div>
+
                     <div class="col-md-6">
-                      <label class="small mb-1" for="Last Name"
-                        >Last name</label
-                      >
+                      <label class="small mb-1" for="lastName">Last name</label>
                       <input
                         class="form-control"
                         id="lastName"
+                        name="lastName"
                         type="text"
-                        placeholder="Enter your last name"
                         value="<%= user.lastName %>"
                       />
-                      <span id="errorlastname" class="error"></span>
+                      <span id="errorLastName" class="error"></span>
                     </div>
-                  </div>
-
-                  <div class="row gx-3 mb-3">
-                    <div class="col-md-6">
-                      <label class="small mb-1" for="Phone">Phone number</label>
-                      <input
-                        class="form-control"
-                        id="Phone"
-                        type="tel"
-                        placeholder="Enter your phone number"
-                      />
-                    </div>
-                    <div class="col-md-6">
-                      <label class="small mb-1" for="inputBirthday"
-                        >Birthday</label
+                    <div class="mb-3">
+                      <label class="small mb-1" for="email"
+                        >Email address</label
                       >
                       <input
                         class="form-control"
-                        id="inputBirthday"
-                        type="date"
-                        name="birthday"
-                        placeholder="Enter your birthday"
+                        id="email"
+                        name="email"
+                        type="text"
+                        value="<%= user.email%>"
                       />
+                      <span id="errorEmail" class="error"></span>
                     </div>
                   </div>
-                  <div class="row gx-3 mb-3">
-                    <p>Social Accounts</p>
-                    <div class="col-md-6">
-                      <i class="fa-brands fa-facebook" id="fb"></i>
-                      <input
-                        class="form-control"
-                        id="First Name"
-                        type="text"
-                        placeholder="Link to Facebook"
-                      />
+                </form>
+                <div class="row gx-3 mb-3">
+                  <div class="col-md-6">
+                    <label class="small mb-1" for="phone">Phone number</label>
+                    <input
+                      class="form-control"
+                      id="phone"
+                      type="tel"
+                      placeholder="Enter your phone number"
+                      value="<%= user.phoneNumber %>"
+                    />
+                  </div>
+                  <div class="col-md-6">
+                    <label class="small mb-1" for="inputBirthday"
+                      >Birthday</label
+                    >
+                    <input
+                      class="form-control"
+                      id="inputBirthday"
+                      type="date"
+                      value="<%= user.birthdayDate %>"
+                    />
+                  </div>
+                </div>
+                <div class="row gx-3 mb-3">
+                  <p>Social Accounts</p>
+                  <div class="col-md-6 social-media">
+                    <i class="fa-brands fa-facebook"></i>
+                    <input
+                      class="form-control"
+                      id="facebook"
+                      type="text"
+                      placeholder="Link to Facebook"
+                      value="<%= user.facebook %>"
+                    />
+                  </div>
 
-                      <span id="errorFirstname" class="error"></span>
-                    </div>
-                    <div class="col-md-6">
-                      <i class="fa-brands fa-linkedin" id="Li"></i>
-                      <input
-                        class="form-control"
-                        id="Last Name"
-                        type="text"
-                        placeholder="Link to LinkedIn"
-                      />
-                      <span id="errorlastname" class="error"></span>
-                    </div>
+                  <div class="col-md-6 social-media">
+                    <i class="fa-brands fa-linkedin"></i>
+                    <input
+                      class="form-control"
+                      id="linkedin"
+                      type="text"
+                      placeholder="Link to LinkedIn"
+                      value="<%= user.linkedin %>"
+                    />
                   </div>
-                  <div class="row gx-3 mb-3">
-                    <div class="col-md-6">
-                      <i class="fa-brands fa-github" id="gh"></i>
-                      <input
-                        class="form-control"
-                        id="Last Name"
-                        type="text"
-                        placeholder="Link to Github"
-                      />
-                      <span id="errorlastname" class="error"></span>
-                    </div>
-                    <div class="col-md-6">
-                      <i class="fa-brands fa-twitter" id="tw"></i>
-                      <input
-                        class="form-control"
-                        id="First Name"
-                        type="text"
-                        placeholder="Link to Twitter"
-                      />
 
-                      <span id="errorFirstname" class="error"></span>
-                    </div>
+                  <div class="col-md-6 social-media">
+                    <i class="fa-brands fa-github"></i>
+                    <input
+                      class="form-control"
+                      id="github"
+                      type="text"
+                      placeholder="Link to Github"
+                      value="<%= user.github %>"
+                    />
                   </div>
-                  <button class="btn btn-primary" type="submit">
+
+                  <div class="col-md-6 social-media">
+                    <i class="fa-brands fa-twitter"></i>
+                    <input
+                      class="form-control"
+                      id="twitter"
+                      type="text"
+                      placeholder="Link to Twitter"
+                      value="<%= user.Twitter %>"
+                    />
+                  </div>
+                </div>
+                <div class="btns">
+                  <button class="btn btn-primary" id="saveBtn" type="submit">
                     Save changes
                   </button>
                   <button class="btn clear_btn" type="button">Clear</button>
-                </form>
+                </div>
               </div>
             </div>
           </div>
@@ -195,120 +196,49 @@
       </div>
     </main>
 
-    <script>
-      const userName = document.getElementById("userName");
-      const firstName = document.getElementById("firstName");
-      const lastName = document.getElementById("lastName");
-      const myForm = document.getElementById("UpdateProfile_Form");
-      const email = document.getElementById("Email Address");
+    <script type="module">
+      import { validateForm } from "/js/formValidation.js";
 
-      const errorUsername = document.getElementById("errorUsername");
+      const form = document.getElementById("form");
 
-      function process(e) {
+      form.addEventListener("submit", async (e) => {
         e.preventDefault();
-      }
-      //Show input error messages
 
-      function showError(input, message) {
-        const formControl = input.parentElement;
-        formControl.className = "form-control error";
-        const span = formControl.querySelector("span");
-        span.innerText = message;
-      }
-
-      //show success color
-      function showSucces(input) {
-        const formControl = input.parentElement;
-        console.log(formControl);
-        formControl.className = "form-control success";
-      }
-
-      //check email is valid
-      function checkEmail(input) {
-        const re =
-          /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
-        if (re.test(input.value.trim())) {
-          showSucces(input);
-        } else {
-          showError(input, "Email is not invalid");
+        const errorMsg = validateForm(form);
+        console.log(errorMsg);
+        if (errorMsg) {
+          return Toastify({
+            text: errorMsg,
+            duration: 3000,
+            gravity: "top",
+            close: false,
+            backgroundColor: "red",
+          }).showToast();
         }
-      }
 
-      //checkRequired fields
-      function checkRequired(inputArr) {
-        inputArr.forEach(function (input) {
-          if (input.value.trim() === "") {
-            showError(input, `${getFieldName(input)} is required`);
-          } else {
-            showSucces(input);
-          }
-        });
-      }
-
-      //check input Length
-      function checkLength(input, min, max) {
-        if (input.value.length < min) {
-          showError(
-            input,
-            `${getFieldName(input)} must be at least ${min} characters`
-          );
-        } else if (input.value.length > max) {
-          showError(
-            input,
-            `${getFieldName(input)} must be less than ${max} characters`
-          );
-        } else {
-          showSucces(input);
-        }
-      }
-
-      //get FieldName
-      function getFieldName(input) {
-        return input.id.charAt(0).toUpperCase() + input.id.slice(1);
-      }
-
-      myForm.addEventListener("submit", async (e) => {
-        e.preventDefault();
-        // checkRequired([userName, email, firstName, lastName]);
-        // checkLength(userName, 4, 15);
-        // checkLength(lastName, 4, 15);
-        // checkEmail(email);
-
-        // if (userName.value === "" || userName.value == null) {
-        //   errorUsername.innerHTML = "User name is required";
-        // }
-        // if (message.length > 0) {
-        //   errorMessage.innerText = message.join(", ");
-        // }
         try {
           const res = await fetch("/student/settings", {
-            method: "POST",
+            method: "PUT",
             headers: {
               "Content-Type": "application/json",
             },
             body: JSON.stringify({
-              username: document.getElementById("username").value,
+              email: document.getElementById("email").value,
               firstName: document.getElementById("firstName").value,
               lastName: document.getElementById("lastName").value,
+              phoneNumber: document.getElementById("Phone").value,
+              birthdayDate: document.getElementById("inputBirthday").value,
             }),
           });
-          const data = await res.json();
-          if (data.msg || data.errMsg) {
-            let toastText = "";
-            if (data.msg) {
-              toastText += data.msg + " ";
-            }
-            if (data.errMsg) {
-              toastText += data.errMsg;
-            }
 
+          const data = await res.json();
+          if (data.msg) {
             Toastify({
-              text: toastText,
-              duration: 3000, // Display duration in milliseconds
-              gravity: "top", // Display position (top, bottom, or center)
-              close: true, // Show a close button
-              backgroundColor: "linear-gradient(to right, #00b09b, #96c93d)", // Customize the background color
-              className: "custom-toast", // Add a custom CSS class for styling
+              text: "Updated Successfully",
+              duration: 3000,
+              gravity: "top",
+              close: false,
+              backgroundColor: "green",
             }).showToast();
           }
         } catch (err) {
