--- a/views/registration/login.ejs
+++ b/views/registration/login.ejs
@@ -22,7 +22,7 @@
       <div class="container">
         <div class="title">
           <div class="notAllowed">
-            <%=notAllowed ? "You are not allowe to enter the Admin Page" : ""%>
+            <%=notAllowed ? "You are not allowed to enter the Admin Page" : ""%>
           </div>
           <h1>Welcome back</h1>
           <h2>Log in!</h2>
