--- a/views/instructor/home.ejs
+++ b/views/instructor/home.ejs
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- nav css -->
-    <link rel="stylesheet" href="/css/instructor/nav.css" />
-    <!-- home css -->
-    <link rel="stylesheet" href="/css/instructor/home.css" />
 
-    <title>Instructor Page</title>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- nav css -->
+  <link rel="stylesheet" href="/css/instructor/nav.css" />
+  <!-- home css -->
+  <link rel="stylesheet" href="/css/instructor/home.css" />
 
-  <body>
-    <%- include("./nav.ejs") %>
+  <title>Instructor Page</title>
+</head>
+
+<body>
+  <%- include("./nav.ejs") %>
     <main>
       <h1>My Courses</h1>
       <% if(courses){ %>
-      <section class="courses">
-        <% courses.forEach(course => {%>
-        <div class="course">
-          <img src="<%=course.coverPic %>" alt="course 1" />
-          <p class="name"><%=course.title %></p>
-          <p>Enrolled <%=course.numberOfStudents %> student</p>
-          <p>Go to <a href="/Instructor/<%=course.instructorId %>/course">course</a></p>
-        </div>
-        <% });%>
-      </section>
-      <% } else {%>
-        <p>No Available courses</p>
-        <% } %>
+        <section class="courses">
+          <% courses.forEach(course=> {%>
+            <div class="course">
+              <img src="<%=course.coverPic %>" alt="course 1" />
+              <p class="name">
+                <%=course.title %>
+              </p>
+              <p>Enrolled <%=course.numberOfStudents %> student</p>
+              <p>Go to <a href="/Instructor/<%=course.instructorId %>/course">course</a></p>
+            </div>
+            <% });%>
+        </section>
+        <% } else {%>
+          <p>No Available courses</p>
+          <% } %>
+
+
     </main>
 
     <!-- footer  -->
@@ -44,10 +49,7 @@
     </footer>
 
     <!-- font-awesome  -->
-    <script
-      src="https://kit.fontawesome.com/0b0cd0c012.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/0b0cd0c012.js" crossorigin="anonymous"></script>
 
     <!-- profile-menu -->
     <script>
@@ -90,5 +92,6 @@
       });
     </script>
 
-  </body>
+</body>
+
 </html>
