--- a/views/instructor/home.ejs
+++ b/views/instructor/home.ejs
@@ -24,8 +24,8 @@
               <p class="name">
                 <%=course.title %>
               </p>
-              <p>Enrolled <%=course.numberOfStudents %> student</p>
-              <p>Go to <a href="/Instructor/<%=course.instructorId %>/course">course</a></p>
+              <p>Enrolled <%=course.numberOfStudents%> student</p>
+              <p>Go to <a href="/Instructor/<%=course.instructorId%>/<%=course.id %>">course</a></p>
             </div>
             <% });%>
         </section>
@@ -33,25 +33,7 @@
           <p>No Available courses</p>
           <% } %>
 
-            <section>
-              <h1>My Projects</h1>
-              <% if(projects){ %>
-                <section class="projects">
-                  <% projects.forEach(project=> {%>
-                    <div class="project">
-                      <img src="<%=project.coverPic %>" alt="course 1" />
-                      <p class="name">
-                        <%=project.title %>
-                      </p>
-                      <p>Number of students: <%=course.studentsPerTeam %> student</p>
-                      <p>Go to <a href="/Instructor/<%=project.course.id %>/project">course</a></p>
-                    </div>
-                    <% });%>
-                </section>
-                <% } else {%>
-                  <p>No Available courses</p>
-                  <% } %>
-            </section>
+            
     </main>
 
     <!-- footer  -->
