--- a/views/instructor/home.ejs
+++ b/views/instructor/home.ejs
@@ -49,7 +49,7 @@
                     <% });%>
                 </section>
                 <% } else {%>
-                  <p>No Available courses</p>
+                  <p>No Available Projects</p>
                   <% } %>
             </section>
     </main>
