--- a/public/css/instructor/home.css
+++ b/public/css/instructor/home.css
@@ -1,14 +1,18 @@
-
-.courses{
+/* course section */
+.courses-container{
   overflow-x: scroll;
   display: flex;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
 /* Hide scrollbar for Chrome, Safari and Opera */
-.courses::-webkit-scrollbar {
+.courses-container::-webkit-scrollbar {
   display: none;
 }
-.course{
+
+.course-card{
   margin: 10px;
+  padding-bottom: 10px;
   margin-left: 0;
   width:200px ;
   border: #e7e3e3 1px solid;
@@ -19,20 +23,59 @@
   align-items: center;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
-.course img{
+.course-card img{
   width: 200px;
   padding: 0.5rem;
 }
-.course p{
+.course-card p{
   font-size: 14px;
 }
-.course .name{
+.course-card .name{
   font-weight: 500;
   font-size: 18px;
 }
-.course a{
+.course-card a{
   color:black;
 }
+
+/* projects section */
+.projects-container{
+  overflow-x: scroll;
+  display: flex;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+.projects-container::-webkit-scrollbar {
+  display: none;
+}
+.project-card{
+  margin: 10px;
+  padding-bottom: 20px;
+  margin-left: 0;
+  width:250px ;
+  border: #e7e3e3 1px solid;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+.project-card img{
+  width: 250px;
+  padding: 0.5rem;
+}
+.project-card p{
+  font-size: 14px;
+}
+.project-card .name{
+  font-weight: 500;
+  font-size: 18px;
+}
+.project-card a{
+  color:black;
+}
+
 /* end of main  */
 
 /* footer */
