--- a/views/instructor/course.ejs
+++ b/views/instructor/course.ejs
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- nav css -->
+    <link rel="stylesheet" href="/css/instructor/nav.css" />
+    <!-- inner-course css -->
+    <link rel="stylesheet" href="/css/instructor/course.css" />
+    <title>Instructor course</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- nav css -->
-  <link rel="stylesheet" href="/css/instructor/nav.css" />
-  <!-- course css -->
-  <link rel="stylesheet" href="/css/instructor/course.css" />
-  <link rel="stylesheet" href="/css/instructor/project.css" />
-  <title>Instructor course</title>
-</head>
-
-<body>
-  <%- include("./nav.ejs") %>
+  <body>
+    <%- include("./nav.ejs") %>
     <main>
       <section>
         <div class="my-course">
-          <input type="text" name="title" class="title" id="title" value="Course Title" readonly />
+          <input
+            type="text"
+            name="title"
+            class="title"
+            id="title"
+            value="Course Title"
+            readonly
+          />
           <i class="fa-solid fa-pencil" onclick="editTitle()"></i>
         </div>
         <div class="course">
@@ -27,30 +32,54 @@
               +Add Material
             </li>
             <li id="add-project-btn" onclick="projectForm()">+Add Project</li>
-            <!-- <li id="add-activity-btn" onclick="activityForm()">
-              +Add Activity
-            </li> -->
           </ul>
           <!-- remove extra class -->
           <div class="add-material">
             <div class="add-material-form" id="material">
               <form action="post">
                 <div>
-                  <label for="type" class="form-label">Choose the type of Material:</label>
-                  <input type="radio" name="type" id="links" onchange="linkInput()" />
+                  <label for="type" class="form-label"
+                    >Choose the type of Material:</label
+                  >
+                  <input
+                    type="radio"
+                    name="type"
+                    id="links"
+                    onchange="linkInput()"
+                  />
                   <label for="links">Link</label>
-                  <input type="radio" name="type" id="document" onchange="documentInput()" />
+                  <input
+                    type="radio"
+                    name="type"
+                    id="document"
+                    onchange="documentInput()"
+                  />
                   <label for="document">Document</label>
                   <!-- add the course and project with the deadline  -->
-                  <input type="radio" name="type" id="deadlines" onchange="submissionInput()" />
+                  <input
+                    type="radio"
+                    name="type"
+                    id="deadlines"
+                    onchange="submissionInput()"
+                  />
                   <label for="deadlines">Deadlines</label>
                   <!-- ---------------- -->
-                  <input type="radio" name="type" id="assignments" onchange="assignmentInput()" />
+                  <input
+                    type="radio"
+                    name="type"
+                    id="assignments"
+                    onchange="assignmentInput()"
+                  />
                   <label for="assignments">Assignments</label>
                 </div>
                 <div>
                   <label for="title" class="form-label">Material Title:</label>
-                  <input type="text" name="" id="" placeholder="Enter The Title here" />
+                  <input
+                    type="text"
+                    name=""
+                    id=""
+                    placeholder="Enter The Title here"
+                  />
                 </div>
                 <div>
                   <label for="content" class="form-label">Content:</label>
@@ -62,16 +91,18 @@
           </div>
           <div class="add-project">
             <div class="add-project-form" id="project">
-              <form action="/instructor/<%= instructorId %>/<%=courseId %>" method="post">
+              <form
+                action="/instructor/<%= instructorId %>/<%=courseId %>"
+                method="post"
+              >
                 <fieldset>
                   <legend><span class="number">1</span> Project Info</legend>
 
                   <label for="title">Project title:</label>
-                  <input type="text" id="title" name="title">
+                  <input type="text" id="title" name="title" />
 
                   <label for="Deadline">Deadline:</label>
-                  <input type="date" id="deadline" name="deadline">
-
+                  <input type="date" id="deadline" name="deadline" />
                 </fieldset>
                 <fieldset>
                   <legend><span class="number">2</span> Project details</legend>
@@ -79,8 +110,13 @@
                   <label for="description">Description:</label>
                   <textarea id="description" name="description"></textarea>
                   <div>
-                    <label for="numberOfStudentsPerTeam">Number of team members:</label>
-                    <select name="numberOfStudentsPerTeam" id="numberOfStudentsPerTeam">
+                    <label for="numberOfStudentsPerTeam"
+                      >Number of team members:</label
+                    >
+                    <select
+                      name="numberOfStudentsPerTeam"
+                      id="numberOfStudentsPerTeam"
+                    >
                       <option value="2">2</option>
                       <option value="3">3</option>
                       <option value="4">4</option>
@@ -97,13 +133,11 @@
                   </div>
 
                   <label>Rquirments file:</label>
-                  <input type="file" name="requirementsFile">
-
+                  <input type="file" name="requirementsFile" />
                 </fieldset>
 
                 <button type="submit" id="submit">Submit</button>
                 <button type="clear" id="clear">Clear</button>
-
               </form>
             </div>
           </div>
@@ -112,7 +146,10 @@
     </main>
 
     <!-- font-awesome -->
-    <script src="https://kit.fontawesome.com/0b0cd0c012.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/0b0cd0c012.js"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- profile menu -->
     <script>
@@ -205,6 +242,5 @@
         document.getElementById("add-activity-btn").classList.add("active");
       }
     </script>
-</body>
-
+  </body>
 </html>
