--- a/views/instructor/home.ejs
+++ b/views/instructor/home.ejs
@@ -57,11 +57,10 @@
               >
             </p>
           </div>
-          <% });%>
+          <% });%> <% } else {%>
+          <p>No Available Projects</p>
+          <% } %>
         </div>
-        <% } else {%>
-        <p>No Available Projects</p>
-        <% } %>
       </section>
     </main>
 
